sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: illegal start of simple expression
while (fini == false) }
                      ^AlgBubbleSort1:12: error: 'while' expected but '}' found.
}
^